# pedidosya-cli

./: Cargo.toml  README.md  install
src/: main.rs
